<resources>
    <string name="app_name">Weather</string>
    <string name="weather">Weather</string>
    <string name="title_activity_choose_position">ChoosePosition</string>
    <string name="temperature_sign" translatable="false">℃</string>
    <string name="location">Location</string>
    <string name="weather_icon">weather icon</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="aqi">Air Quality Index</string>
    <string name="humidity">Humidity</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="na" translatable="false">N/A</string>
    <string name="pm25">Major Pollutants</string>
    <string name="title_activity_settings">Settings</string>
    <string name="choose_your_position">Choose your position</string>
    <string name="permission_denied">Essential permission denied \n Positioning may be inaccurate</string>
    <string name="access_network_failed">Network Problem</string>
    <string name="auto_locate_disabled">Auto locate has been disabled</string>
    <string name="warmer">warmer</string>
    <string name="colder">colder</string>

    <string-array name="weekend">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string-array name="week">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>

    <!-- Strings related to Settings -->
    <string-array name="temperature">
        <item>Celsius degree</item>
        <item>Fahrenheit degree</item>
    </string-array>

    <string-array name="temperature_value" translatable="false">
        <item>celsius</item>
        <item>fahrenheit</item>
    </string-array>

    <string name="temperature_default" translatable="false">celsius</string>

    <string name="auto_locate">Auto Locate</string>

    <string name="feedback">Feedback</string>

    <string name="selected_county">"selected county: "</string>

    <string name="weather_notifications">Weather Notifications</string>

    <!--各种天气名称-->
    <string name="CLEAR_DAY">Sunny</string>
    <string name="CLEAR_NIGHT">Sunny</string>
    <string name="PARTLY_CLOUDY_DAY">Partly Cloudy</string>
    <string name="PARTLY_CLOUDY_NIGHT">Party Cloudy</string>
    <string name="CLOUDY">Cloudy</string>
    <string name="RAIN">Rain</string>
    <string name="LIGHT_RAIN">Light Rain</string>
    <string name="MODERATE_RAIN">Moderate Rain</string>
    <string name="HEAVY_RAIN">Heavy Rain</string>
    <string name="SNOW">Snow</string>
    <string name="WIND">Wind</string>
    <string name="FOG">Fog</string>
    <string name="HAZE">Haze</string>
    <string name="SLEET">Sleet</string>

    <string name="LIGHT_SNOW">Light Snow</string>
    <string name="MODERATE_SNOW">Moderate Snow</string>
    <string name="HEAVY_SNOW">Heavy Snow</string>

    <string name="appearance_setting">Appearance</string>
    <string name="temperature">Temperature</string>
    <string name="notification_setting">Notification</string>
    <string name="notification_summary">Get weather-related message everyday</string>
    <string name="location_setting">Location</string>
    <string name="about_setting">About</string>

    <string name="current_version">Current Version</string>
    <string name="data_resources">Data Resources</string>
    <string name="choose_position">Choose Position</string>
    <string name="setting">Setting</string>
    <string name="select_disabled">Place you chosen</string>
    <string name="uv">UV</string>
    <string name="carWashing">Car Washing</string>
    <string name="dressing">Dressing</string>
    <string name="wind_direction">Direction</string>
    <string name="wind_level">Level</string>

    <!--Wind directions-->
    <string name="north">North</string>
    <string name="northeast">NE</string>
    <string name="east">East</string>
    <string name="southeast">SE</string>
    <string name="south">South</string>
    <string name="southwest">SW</string>
    <string name="west">West</string>
    <string name="northwest">NW</string>
    <string name="loading">Loading</string>
    <string name="just_now">just now</string>
    <string name="minute_age">" minutes ago"</string>
    <string name="hour_ago">" hours ago"</string>
    <string name="Lunar">Lunar Date</string>
    <string name="notification_time">Notification Time</string>
    <string name="now">Now</string>
    <string name="donate">Donate</string>
    <string name="donate_info">Donate any amount to support developers  \nClick  \'OK\' to open Alipay.</string>
    <string name="email_needed">You need to install any email app first</string>
    <string name="alipay_needed">You have to install \'Alipay\' first</string>
    <string name="action_alert">Weather Alert</string>
    <string name="weather_15">Weather in 15 myDays</string>
    <string name="Today">Today</string>
    <string name="dark_background">Dark Background</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="choose_donate_method">Choose Method</string>
    <string name="donate_with_wechat">Donate Through WeChat</string>
    <string name="info_wechat_donate">Please cut a screenshot of the QR code and scan it in WeChat</string>
    <string name="refresh_circle">Show Refresh Button</string>
    <string name="search">search</string>
    <string name="go_to_settings">Go To Settings</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add a widget</string>
    <string name="error_happens">Some error happened.</string>
    <string name="ip_method_locate">Locate according to your IP address.</string>
    <string name="donnot_show">don\'t show</string>
    <string name="grant_permission">Grant</string>
    <string name="locate_failed">Locate failed, make sure you have enabled the location function.</string>
    <string name="yesterday">yesterday</string>
    <string name="days_before">%d myDays before</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="wish_you_lucky" translatable="false">Have a nice day!</string>
    <string name="weather_desc_today">Partly cloudy currently. It’s 15°, the high today was forecast as 18°.</string>
    <string name="sun_set_time">1hr 56min until sunset.</string>

    <string name="caiyun_weather">Colorful Clouds</string>
    <string name="china_mete_admin">China Meteorological Administration</string>
    <string name="he_weather">He Weather</string>
    <string name="yahoo_weather">Yahoo！</string>

    <string name="thanks_to">Thanks To</string>
    <string name="provide_weather_in_china">Provides weather data in China</string>
    <string name="provide_weather_outside_china">Provides weather data beyond China Mainland</string>

    <string name="click_to_open_link">Click to open link in browser</string>
    <string name="current_version_">Current Version: %s</string>

    <string name="updated_on">updated on %s</string>
    <string name="alarm_notifications">Alarm Notifications</string>

    <string name="notification_warmer">%1$d° warmer in %2$s</string>
    <string name="notification_colder">%1$d° colder in %2$s</string>


    <string name="weather_desc">%1$s in %2$s tomorrow, up to %3$d° and down to %4$d°</string>
    <string name="dont_forget_your_raincoat">don\'t forget your raincoat. </string>
    <string name="air_not_good">and the air is not good</string>

    <string name="comma">, </string>
    <string name="period">. </string>

    <string name="dont_forget_your_raincoat_on">Don\'t forget your raincoat on %s. </string>
    <string name="big_wind_on">Big wind on %s</string>

    <string name="refreshing">Refreshing…</string>
    <string name="refreshing_weather">Refreshing Weather…</string>
</resources>
