<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="appearance"
        android:title="@string/appearance_setting">

        <ListPreference
            android:defaultValue="@string/temperature_default"
            android:dialogTitle="@string/temperature"
            android:entries="@array/temperature"
            android:entryValues="@array/temperature_value"
            android:key="isCelsius"
            android:summary="which degree?"
            android:title="@string/temperature" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/location_setting">

        <SwitchPreference
            android:id="@+id/auto_locate_sp"
            android:defaultValue="true"
            android:key="auto_locate"
            android:title="@string/auto_locate" />

        <Preference
            android:key="choose_position"
            android:title="@string/choose_position" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notification_setting">

        <SwitchPreference
            android:defaultValue="false"
            android:key="notification"
            android:persistent="true"
            android:summary="@string/notification_summary"
            android:title="@string/weather_notifications" />
        <Preference
            android:key="notification_time"
            android:persistent="true"
            android:title="@string/notification_time" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about_setting">
        <Preference
            android:key="about"
            android:title="@string/about_setting">

        </Preference>

        <Preference
            android:key="donate"
            android:title="@string/donate" />

        <Preference
            android:key="feedback"
            android:title="@string/feedback" />
    </PreferenceCategory>


</PreferenceScreen>