<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="150dp">

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline9"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <top.maweihao.weather.android_view.WindMillView
        android:layout_width="80dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/windMillView" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline12"
        app:layout_constraintGuide_begin="75dp"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/wind_direction"
        android:textColor="@color/colorTextDark2nd"
        app:layout_constraintLeft_toRightOf="@+id/windMillView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wind_direction_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/na"
        android:textColor="@color/colorTextDark"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/wind_level"
        android:textColor="@color/colorTextDark2nd"
        app:layout_constraintLeft_toRightOf="@+id/windMillView"
        app:layout_constraintTop_toTopOf="@+id/guideline12" />

    <TextView
        android:id="@+id/wind_level_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/na"
        android:textColor="@color/colorTextDark"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <top.maweihao.weather.android_view.SemiCircleView
        android:id="@+id/AQI_Circle"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:aqi="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72" />

    <top.maweihao.weather.android_view.SemiCircleView
        android:id="@+id/PM_Circle"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        app:aqi="false"
        app:layout_constraintBottom_toBottomOf="@+id/AQI_Circle"
        app:layout_constraintLeft_toRightOf="@+id/AQI_Circle"
        app:layout_constraintTop_toTopOf="@+id/AQI_Circle" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/aqi"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@+id/AQI_Circle"
        app:layout_constraintRight_toRightOf="@+id/AQI_Circle"
        app:layout_constraintTop_toBottomOf="@+id/AQI_Circle" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/pm25"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@+id/PM_Circle"
        app:layout_constraintRight_toRightOf="@+id/PM_Circle"
        app:layout_constraintTop_toBottomOf="@+id/PM_Circle" />

    <TextView
        android:id="@+id/wind_card_air_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/na"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline9"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>