<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline8"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="180dp" />

    <top.maweihao.weather.view.WindMillView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.375" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/wind_direction"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintVertical_bias="0.529"
        app:layout_constraintLeft_toLeftOf="@+id/guideline8"
        app:layout_constraintRight_toLeftOf="@+id/guideline11"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.511" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="17dp"
        android:text="@string/wind_level"
        app:layout_constraintLeft_toLeftOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/textView10" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline10"
        app:layout_constraintGuide_begin="50dp"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/wind_direction_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/na"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintLeft_toLeftOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wind_level_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/na"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="@+id/guideline10" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline11"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />
</android.support.constraint.ConstraintLayout>